--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "lodash": "^3.10.1",
+    "memcached": "^2.2.0",
     "pkmn": "^1.0.7",
     "twit": "^2.1.0",
     "winston": "^2.1.1"
