--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-jshint": "^1.12.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.4",
-    "jshint-stylish": "^2.0.1"
+    "jshint-stylish": "^2.0.1",
+    "mocha-tldr-reporter": "^1.0.0"
   }
 }
